--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -43,7 +43,7 @@
 \newacronym[description={Wellcome Trust Case-Control Consortium}]{wtccc}{WTCCC}{Wellcome Trust Case-Control Consortium}
 \newacronym[description={Atherosclerosis Risk in the Community}]{aric}{ARIC}{Atherosclerosis Risk in the Community}
 \newacronym[description={Framingham Heart Study}]{fhs}{FHS}{Framingham Heart Study}
-\newacronym[description={Kyoto Encyclopedia of Genes and Genomics}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomics}
+\newacronym[description={Kyoto Encyclopedia of Genes and Genomes}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomes}
 
 \newacronym[description={genetic relationship matrix}]{grm}{GRM}{genetic relationship matrix}
 
