--- a/references.bib
+++ b/references.bib
@@ -4754,3 +4754,34 @@ url = {http://doi.wiley.com/10.1111/j.1420-9101.2011.02297.x},
 volume = {24},
 year = {2011}
 }
+
+@article{Delaneau2014,
+author = {Delaneau, Olivier and Marchini, Jonathan and McVean, Gil a. and Donnelly, Peter and Lunter, Gerton and Marchini, Jonathan L. and Myers, Simon and Gupta-Hinch, Anjali and Iqbal, Zamin and Mathieson, Iain and Rimmer, Andy and Xifara, Dionysia K. and Kerasidou, Angeliki and Churchhouse, Claire and Altshuler, David M. and Gabriel, Stacey B. and Lander, Eric S. and Gupta, Namrata and Daly, Mark J. and DePristo, Mark a. and Banks, Eric and Bhatia, Gaurav and Carneiro, Mauricio O. and del Angel, Guillermo and Genovese, Giulio and Handsaker, Robert E. and Hart, Chris and McCarroll, Steven a. and Nemesh, James C. and Poplin, Ryan E. and Schaffner, Stephen F. and Shakir, Khalid and Sabeti, Pardis C. and Grossman, Sharon R. and Tabrizi, Shervin and Tariya, Ridhi and Li, Heng and Reich, David and Durbin, Richard M. and Hurles, Matthew E. and Balasubramaniam, Senduran and Burton, John and Danecek, Petr and Keane, Thomas M. and Kolb-Kokocinski, Anja and McCarthy, Shane and Stalker, James and Quail, Michael and Ayub, Qasim and Chen, Yuan and Coffey, Alison J. and Colonna, Vincenza and Huang, Ni and Jostins, Luke and Scally, Aylwyn and Walter, Klaudia and Xue, Yali and Zhang, Yujun and Blackburne, Ben and Lindsay, Sarah J. and Ning, Zemin and Frankish, Adam and Harrow, Jennifer and Tyler-Smith, Chris and Abecasis, Gonalo R. and Kang, Hyun Min and Anderson, Paul and Blackwell, Tom and Busonero, Fabio and Fuchsberger, Christian and Jun, Goo and Maschio, Andrea and Porcu, Eleonora and Sidore, Carlo and Tan, Adrian and Trost, Mary Kate and Bentley, David R. and Grocock, Russell and Humphray, Sean and James, Terena and Kingsbury, Zoya and Bauer, Markus and Cheetham, R. Keira and Cox, Tony and Eberle, Michael and Murray, Lisa and Shaw, Richard and Chakravarti, Aravinda and Clark, Andrew G. and Keinan, Alon and Rodriguez-Flores, Juan L. and {De La Vega}, Francisco M. and Degenhardt, Jeremiah and Eichler, Evan E. and Flicek, Paul and Clarke, Laura and Leinonen, Rasko and Smith, Richard E. and Zheng-Bradley, Xiangqun and Beal, Kathryn and Cunningham, Fiona and Herrero, Javier and McLaren, William M. and Ritchie, Graham R. S. and Barker, Jonathan and Kelman, Gavin and Kulesha, Eugene and Radhakrishnan, Rajesh and Roa, Asier and Smirnov, Dmitriy and Streeter, Ian and Toneva, Iliana and Gibbs, Richard a. and Dinh, Huyen and Kovar, Christie and Lee, Sandra and Lewis, Lora and Muzny, Donna and Reid, Jeff and Wang, Min and Yu, Fuli and Bainbridge, Matthew and Challis, Danny and Evani, Uday S. and Lu, James and Nagaswamy, Uma and Sabo, Aniko and Wang, Yi and Yu, Jin and Fowler, Gerald and Hale, Walker and Kalra, Divya and Green, Eric D. and Knoppers, Bartha M. and Korbel, Jan O. and Rausch, Tobias and Sttz, Adrian M. and Lee, Charles and Griffin, Lauren and Hsieh, Chih-Heng and Mills, Ryan E. and von Grotthuss, Marcin and Zhang, Chengsheng and Shi, Xinghua and Lehrach, Hans and Sudbrak, Ralf and Amstislavskiy, Vyacheslav S. and Lienhard, Matthias and Mertes, Florian and Sultan, Marc and Timmermann, Bernd and Yaspo, Marie-Laure and Herwig, Ralf and Mardis, Elaine R. and Wilson, Richard K. and Fulton, Lucinda and Fulton, Robert and Weinstock, George M. and Chinwalla, Asif and Ding, Li and Dooling, David and Koboldt, Daniel C. and McLellan, Michael D. and Wallis, John W. and Wendl, Michael C. and Zhang, Qunyuan and Marth, Gabor T. and Garrison, Erik P. and Kural, Deniz and Lee, Wan-Ping and Leong, Wen Fung and Ward, Alistair N. and Wu, Jiantao and Zhang, Mengyao and Nickerson, Deborah a. and Alkan, Can and Hormozdiari, Fereydoun and Ko, Arthur and Sudmant, Peter H. and Schmidt, Jeanette P. and Davies, Christopher J. and Gollub, Jeremy and Webster, Teresa and Wong, Brant and Zhan, Yiping and Sherry, Stephen T. and Xiao, Chunlin and Church, Deanna and Ananiev, Victor and Belaia, Zinaida and Beloslyudtsev, Dimitriy and Bouk, Nathan and Chen, Chao and Cohen, Robert and Cook, Charles and Garner, John and Hefferon, Timothy and Kimelman, Mikhail and Liu, Chunlei and Lopez, John and Meric, Peter and Ostapchuk, Yuri and Phan, Lon and Ponomarov, Sergiy and Schneider, Valerie and Shekhtman, Eugene and Sirotkin, Karl and Slotta, Douglas and Zhang, Hua and Wang, Jun and Fang, Xiaodong and Guo, Xiaosen and Jian, Min and Jiang, Hui and Jin, Xin and Li, Guoqing and Li, Jingxiang and Li, Yingrui and Liu, Xiao and Lu, Yao and Ma, Xuedi and Tai, Shuaishuai and Tang, Meifang and Wang, Bo and Wang, Guangbiao and Wu, Honglong and Wu, Renhua and Yin, Ye and Zhang, Wenwei and Zhao, Jiao and Zhao, Meiru and Zheng, Xiaole and Coin, Lachlan J.M. and Fang, Lin and Li, Qibin and Li, Zhenyu and Lin, Haoxiang and Liu, Binghang and Luo, Ruibang and Shao, Haojing and Wang, Bingqiang and Xie, Yinlong and Ye, Chen and Yu, Chang and Zheng, Hancheng and Zhu, Hongmei and Cai, Hongyu and Cao, Hongzhi and Su, Yeyang and Tian, Zhongming and Yang, Huanming and Yang, Ling and Zhu, Jiayong and Cai, Zhiming and Wang, Jian and Albrecht, Marcus W. and Borodina, Tatiana a. and Auton, Adam and Yoon, Seungtai C. and Lihm, Jayon and Makarov, Vladimir and Jin, Hanjun and Kim, Wook and Kim, Ki Cheol and Gottipati, Srikanth and Jones, Danielle and Cooper, David N. and Ball, Edward V. and Stenson, Peter D. and Barnes, Bret and Kahn, Scott and Ye, Kai and Batzer, Mark a. and Konkel, Miriam K. and Walker, Jerilyn a. and MacArthur, Daniel G. and Lek, Monkol and Shriver, Mark D. and Bustamante, Carlos D. and Gravel, Simon and Kenny, Eimear E. and Kidd, Jeffrey M. and Lacroute, Phil and Maples, Brian K. and Moreno-Estrada, Andres and Zakharia, Fouad and Henn, Brenna and Sandoval, Karla and Byrnes, Jake K. and Halperin, Eran and Baran, Yael and Craig, David W. and Christoforides, Alexis and Izatt, Tyler and Kurdoglu, Ahmet a. and Sinari, Shripad a. and Homer, Nils and Squire, Kevin and Sebat, Jonathan and Bafna, Vineet and Ye, Kenny and Burchard, Esteban G. and Hernandez, Ryan D. and Gignoux, Christopher R. and Haussler, David and Katzman, Sol J. and Kent, W. James and Howie, Bryan and Ruiz-Linares, Andres and Dermitzakis, Emmanouil T. and Lappalainen, Tuuli and Devine, Scott E. and Liu, Xinyue and Maroo, Ankit and Tallon, Luke J. and Rosenfeld, Jeffrey a. and Michelson, Leslie P. and Angius, Andrea and Cucca, Francesco and Sanna, Serena and Bigham, Abigail and Jones, Chris and Reinier, Fred and Li, Yun and Lyons, Robert and Schlessinger, David and Awadalla, Philip and Hodgkinson, Alan and Oleksyk, Taras K. and Martinez-Cruzado, Juan C. and Fu, Yunxin and Liu, Xiaoming and Xiong, Momiao and Jorde, Lynn and Witherspoon, David and Xing, Jinchuan and Browning, Brian L. and Hajirasouliha, Iman and Chen, Ken and Albers, Cornelis a. and Gerstein, Mark B. and Abyzov, Alexej and Chen, Jieming and Fu, Yao and Habegger, Lukas and Harmanci, Arif O. and Mu, Xinmeng Jasmine and Sisu, Cristina and Balasubramanian, Suganthi and Jin, Mike and Khurana, Ekta and Clarke, Declan and Michaelson, Jacob J. and OSullivan, Chris and Barnes, Kathleen C. and Gharani, Neda and Toji, Lorraine H. and Gerry, Norman and Kaye, Jane S. and Kent, Alastair and Mathias, Rasika and Ossorio, Pilar N. and Parker, Michael and Rotimi, Charles N. and Royal, Charmaine D. and Tishkoff, Sarah and Via, Marc and Bodmer, Walter and Bedoya, Gabriel and Yang, Gao and You, Chu Jia and Garcia-Montero, Andres and Orfao, Alberto and Dutil, Julie and Brooks, Lisa D. and Felsenfeld, Adam L. and McEwen, Jean E. and Clemm, Nicholas C. and Guyer, Mark S. and Peterson, Jane L. and Duncanson, Audrey and Dunn, Michael and Peltonenz, Leena},
+doi = {10.1038/ncomms4934},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Delaneau et al. - 2014 - Integrating sequence and array data to create an improved 1000 Genomes Project haplotype reference panel.pdf:pdf},
+issn = {2041-1723},
+journal = {Nature Communications},
+mendeley-groups = {Imputation},
+pages = {1--9},
+publisher = {Nature Publishing Group},
+title = {{Integrating sequence and array data to create an improved 1000 Genomes Project haplotype reference panel}},
+url = {http://www.nature.com/doifinder/10.1038/ncomms4934},
+volume = {5},
+year = {2014}
+}
+
+@article{Machiela2015,
+abstract = {Assessing linkage disequilibrium (LD) across ancestral populations is a powerful approach for investigating population-specific genetic structure as well as functionally mapping regions of disease susceptibility. Here we present LDlink, a web-based collection of bioinformatic modules that query single nucleotide polymorphisms (SNPs) in population groups of interest to generate haplotype tables and interactive plots. Modules are designed with an emphasis on ease of use, query flexibility, and interactive visualization of results. Phase 3 haplotype data from the 1000 Genomes Project are referenced for calculating pairwise metrics of LD, searching for proxies in high LD, and enumerating all observed haplotypes. LDlink is tailored for investigators interested in mapping common and uncommon disease susceptibility loci by focusing on output linking correlated alleles and highlighting putative functional variants. AVAILABILITY: LDlink is a free and publically available web tool which can be accessed at http://analysistools.nci.nih.gov/LDlink/.},
+author = {Machiela, Mitchell J. and Chanock, Stephen J.},
+doi = {10.1093/bioinformatics/btv402},
+file = {:home/murraycadzow/Dropbox/Papers/btv402.pdf:pdf},
+isbn = {1367-4811 (Electronic)$\backslash$r1367-4803 (Linking)},
+issn = {14602059},
+journal = {Bioinformatics},
+number = {21},
+pages = {3555--3557},
+pmid = {26139635},
+title = {{LDlink: A web-based application for exploring population-specific haplotype structure and linking correlated alleles of possible functional variants}},
+volume = {31},
+year = {2015}
+}
